# R-Type

./: CMakeLists.txt  CMakeUserPresets.json  CONTRIBUTING.md  LICENSE  README.md  RFC-TCP.md  RFC-UDP.md  Todo-List.txt  conanfile.txt  install.sh  r-type_client  r-type_server
.github/workflows/: cmake-single-platform.yml
GameEngine/: GameEngine.cpp  GameEngine.hpp  Makefile  Timeout.hpp  myEngine
GameEngine/Components/: test.cpp
GameEngine/Components/AComponent/: AComponent.hpp
GameEngine/Components/AI/: AI.hpp
GameEngine/Components/Camera/: Camera.hpp
GameEngine/Components/Cooldown/: Cooldown.hpp
GameEngine/Components/Damage/: Damage.hpp
GameEngine/Components/Direction/: Direction.hpp
GameEngine/Components/Health/: Health.hpp
GameEngine/Components/HitBoxCircle/: HitBoxCircle.hpp
GameEngine/Components/HitBoxSquare/: HitBoxSquare.hpp
GameEngine/Components/Hitbox/: Hitbox.hpp
GameEngine/Components/Position/: Position.hpp
GameEngine/Components/Shield/: Shield.hpp
GameEngine/Components/Sound/: Sound.hpp
GameEngine/Components/Sprite/: Sprite.hpp
GameEngine/Components/Team/: Team.hpp
GameEngine/Components/Velocity/: Velocity.hpp
GameEngine/Components/Weapon/: Weapon.hpp
GameEngine/Entity/: Entity.hpp
GameEngine/Entity/EntityManager/: EntityManager.hpp
GameEngine/Interfaces/IComponent/: IComponent.hpp
GameEngine/Interfaces/ISystem/: ISystem.hpp
GameEngine/Systems/ASystem/: ASystem.hpp
GameEngine/Systems/SysAI/: SysAI.hpp
GameEngine/Systems/SysAnimation/: SysAnimation.hpp
GameEngine/Systems/SysCamera/: SysCamera.hpp
GameEngine/Systems/SysClear/: SysClear.hpp
GameEngine/Systems/SysClearClient/: SysClearClient.hpp
GameEngine/Systems/SysCollision/: SysCollision.hpp
GameEngine/Systems/SysMap/: SysMap.hpp
GameEngine/Systems/SysMovement/: SysMovement.hpp
GameEngine/Utils/: Timeout.hpp  Utils.hpp
Utils/Thread/: func.h
bonus/Pong/: CMakeUserPresets.json
client/: Client.hpp  main.cpp
client/graphical/: game.cpp  menu.cpp
client/include/: game.hpp  global.hpp  menu.hpp
server/: Includes.hpp  LaunchServer.cpp  Port.hpp  Server.cpp  Server.hpp
server/Room/: Room.cpp  Room.hpp  RoomLobby.cpp  RoomLobby.hpp
server/Save/: HandleSave.cpp  HandleSave.hpp  players.json
(+30 files in other folders)
